WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36977
aria-label doesn't work on image map area
https://bugs.webkit.org/show_bug.cgi?id=36977
Summary
aria-label doesn't work on image map area
chris fleizach
Reported
2010-04-01 12:35:04 PDT
@aria-label value should be recognized as the label, but it's only determined from @alt
Attachments
patch
(4.21 KB, patch)
2010-04-01 12:38 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-04-01 12:38:10 PDT
Created
attachment 52322
[details]
patch
chris fleizach
Comment 2
2010-04-01 12:46:50 PDT
http://trac.webkit.org/changeset/56930
Eric Seidel (no email)
Comment 3
2010-04-01 21:33:15 PDT
This test looks to be very flaky judging by
bug 37005
.
Adam Barth
Comment 4
2010-04-01 21:39:04 PDT
Committed
r56965
: <
http://trac.webkit.org/changeset/56965
>
Adam Barth
Comment 5
2010-04-01 21:40:04 PDT
Rolled out because this caused aria-liveregions-notifications to become very flaky (or at least that's our best guess).
chris fleizach
Comment 6
2010-04-01 21:45:59 PDT
i have a hard time believing this test is causing flakiness.
Adam Barth
Comment 7
2010-04-01 21:48:16 PDT
You're welcome to look at the buildbot logs. It's the only accessibility related change near when the test started to become flaky. We might well be wrong, in which case we can roll it back in.
chris fleizach
Comment 8
2010-04-06 14:29:37 PDT
re-added patch now that leopard release is not running aria-live-region-notification test, which failed last time this was added. that test is the flaky one, and this patch does not affect that code path. so no reason to stop legitimate development
http://trac.webkit.org/changeset/57167
Eric Seidel (no email)
Comment 9
2010-04-06 19:30:33 PDT
This test failed on Snow Leopard again just now:
http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r57184%20(5687)/platform/mac/accessibility/aria-liveregions-notifications-diffs.txt
Sorry for commenting on 3 bugs, not sure which one is actually the active one.
chris fleizach
Comment 10
2010-04-06 20:31:47 PDT
i'll see if i can make a less flaky test tonite (In reply to
comment #9
)
> This test failed on Snow Leopard again just now: >
http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r57184%20(5687)/platform/mac/accessibility/aria-liveregions-notifications-diffs.txt
> > Sorry for commenting on 3 bugs, not sure which one is actually the active one.
Adam Barth
Comment 11
2010-04-07 00:04:50 PDT
(In reply to
comment #8
)
> re-added patch now that leopard release is not running > aria-live-region-notification test, which failed last time this was added. that > test is the flaky one, and this patch does not affect that code path. so no > reason to stop legitimate development
There is some interaction between your patch and that test because without your patch the test passes consistently but with your patch, the test fails intermittently. Perhaps we should try to understand the interaction before disabling tests?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug