aria-label doesn't work on image map area https://bugs.webkit.org/show_bug.cgi?id=36977

Reviewed by Beth Dakin.

WebCore:

Test: platform/mac/accessibility/area-with-aria-label.html

* accessibility/AccessibilityImageMapLink.cpp:
(WebCore::AccessibilityImageMapLink::accessibilityDescription):

LayoutTests:

* platform/mac/accessibility/area-with-aria-label-expected.txt: Added.
* platform/mac/accessibility/area-with-aria-label.html: Added.



Canonical link: https://commits.webkit.org/48460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57167 268f45cc-cd09-0410-ab3c-d52691b4dbfc